--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -63,9 +63,13 @@ The bar plot shows white people are more in favor for capitol punishment compare
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 
+```{r}
+table1 <- xtabs(~race + cappun, data=mydata)
+rowPerc(table1)
+colPerc(table1)
+```
 
-
-
+The tables shows about 68% of whites are in favor for capitol punishment with 32% opposing it. Blacks are 52% against it and 47% agree with it. Other races are 61% in favor while about 39% disagree. The results from this numerical data differ from the other numerical data, but not by much.
 
 ## Inferential Results
 
