--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -75,10 +75,19 @@ The tables shows about 68% of whites are in favor for capitol punishment with 32
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
-`
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
+```{r}
+fisherXY(mydata$race, mydata$cappun, printAll = TRUE)
+```
 
+In Person's chi-squared test, there are 416 whites that are in favor of capitol punishment and 198 of them are not. 67 blacks are opposed to capitol punishment and 60 of them are in favor. The other races had a count of 49 being in favor and 31 of them are not. A total of 821 participants voted. For the Fisher's test, the p-value for whites and blacks is 0.00001741 meaning that there is a difference in the data. For whites and other the p-value is 0.2565 and for blacks and others is 0.06299. There is no difference in data between those two comparisons.
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
