Addition to summary.

--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -95,4 +95,4 @@ In Person's chi-squared test, we can see 1300 white people are in favor of capit
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
-According to the data showed above, whites are more in favor for capitol punishment than blacks and other races. Blacks are the most opposed to capitol punishment compared to whites and other races, and other races are in second for both agreeing and disagreeing. Another statistical test was done on the second branch, but due to the smaller sampling size there is not enough data to make a final judgement. 
+According to the data showed above, whites are more in favor for capitol punishment than blacks and other races. Blacks are the most opposed to capitol punishment compared to whites and other races, and other races are in second for both agreeing and disagreeing. Another statistical test was done on the second branch, but due to the smaller sampling size there is not enough data to make a final judgement. The data in this branch had enough statistical data to make a conclusion.
